--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.usp.ime.lreal</groupId>
-	<artifactId>spiral-image</artifactId>
+	<artifactId>onedeefy</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
-	<name>spiral-image</name>
+	<version>2.0-SNAPSHOT</version>
+	<name>onedeefy</name>
 
 	<properties>
 	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,9 +18,9 @@
 	</parent>
 
 	<scm>
-		<url>http://github.com/luiz/spiral-image</url>
-		<connection>scm:git:git://github.com/luiz/spiral-image</connection>
-		<developerConnection>scm:git:git@github.com:luiz/spiral-image.git</developerConnection>
+		<url>http://github.com/luiz/onedeefy</url>
+		<connection>scm:git:git://github.com/luiz/onedeefy</connection>
+		<developerConnection>scm:git:git@github.com:luiz/onedeefy.git</developerConnection>
 	</scm>
 
 	<developers>
@@ -77,7 +77,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>br.ime.usp.lreal.spiral.Spiralizer</mainClass>
+							<mainClass>br.ime.usp.lreal.onedeefy.Spiralizer</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
