--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>br.ime.usp.lreal.onedeefy.Spiralizer</mainClass>
+							<mainClass>br.ime.usp.lreal.onedeefy.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
